--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-122542103-1');
-
     </script>
 
     <script>
@@ -53,7 +52,6 @@
                 }
             });
         }
-
     </script>
 
     <!-- StyleSheet -->
@@ -77,7 +75,6 @@
                 }
             })
         });
-
     </script>
 
 </head>
@@ -132,8 +129,5 @@
     </div>
 
 
-
-</body>
-
-
-</html>
+    <div class="overlay"></div>
+</body></html>
